[add] searchbar component

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,13 +1,13 @@
-#root {
-	font-size: calc(8px + 2vmin);
-}
-
 h1, h2, h3, h4, h5, h6 {
 	margin-bottom: 0;
 }
 
 h1 + p, h2 + p, h3 + p, h4 + p, h5 + p, h6 + p {
 	margin-top: 0;
+}
+
+main > * {
+	margin: 2rem;
 }
 
 a {
