--- a/src/components/App.css
+++ b/src/components/App.css
@@ -6,6 +6,15 @@ h1 + p, h2 + p, h3 + p, h4 + p, h5 + p, h6 + p {
 	margin-top: 0;
 }
 
+pre code {
+	display: block;
+	overflow-x: scroll;
+	overflow-y: scroll;
+	max-height: 10vh;
+	border: 3px double black;
+	resize: vertical;
+}
+
 .content > * {
 	margin: 2rem;
 }
@@ -13,6 +22,7 @@ h1 + p, h2 + p, h3 + p, h4 + p, h5 + p, h6 + p {
 a {
 	color: #61dafb;
 }
+
 
 .center {
 	text-align: center;
