--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,3 +1,7 @@
+* {
+	box-sizing: border-box;
+}
+
 h1, h2, h3, h4, h5, h6 {
 	margin-bottom: 0;
 }
@@ -26,4 +30,23 @@ a {
 
 .center {
 	text-align: center;
+}
+
+.result > h3 {
+	display: flex;
+	align-items: center;
+	flex-direction: row;
+}
+
+.result > p {
+	padding-left: 4.5rem;
+}
+
+.points {
+	text-align: right;
+	padding-right: 0.25rem;
+	margin-right: 0.25rem;
+	width: 4.25rem;
+	border-radius: 5px;
+	border: 2px dotted gray
 }
